# Servo

./: .env  .env.dev  .envrc  .gitignore  Cargo.toml  README.md  Servo.toml  docker-compose.yaml  flake.nix  result
.sqlx/: query-03ac625cad374a9fc8e62da571135b4049af1059001b1feb8ed2582213c0d436.json  query-710c4c9fbee856fc12d12cfb7a08d2282ddf915bcbc637ac70f61668f2577a16.json  query-7c62437d83a6be04b3c7a8f7d134bb3243c9c15854da4e5413face35ef248b36.json  query-84fbd906e9160bcc98de81ed53f9e3163aeb4824ebf925e02e88426592cda1ce.json  query-c51b300fce56751ffc0e14370586486b7142735b386db279f2c114675841a70c.json  query-d6466912f2d29951cf4759f69abf103ef42cfba9bf2969305a73b30b0cda8f2a.json  query-e51faeabb60816e5312531a0288df434a1eb2f5c72cd1f1485b59cff3e0d8e59.json  query-ef64ee029d9dfc08d0e5d6f28f3fe5a1c8f5f59fbf7815671494b70b9400eb90.json
nixModules/: binAndDockerOutputs.nix  devShell.nix
nixModules/libs/: +buildRustApp.nix  +getDeps.nix  +mkRustDocker.nix  libOption.nix
src/libs/account/: Cargo.toml
src/libs/account/src/: error.rs  lib.rs
src/libs/account/src/query/: create_account_db.rs  does_account_exist_db.rs  get_account_by_credentials_db.rs  get_account_by_id.rs  mod.rs
src/libs/account/src/tables/: accounts.rs  mod.rs
src/libs/auth/: Cargo.toml
src/libs/auth/migrations/: 20251008101832_auth_keypairs.sql  20251008101845_auth_accounts.sql  20251008101852_auth_refreshtokens.sql
src/libs/auth/src/: error.rs  lib.rs
src/libs/auth/src/jwt/: algorithm_type.rs  create_jwt.rs  decode_jwt.rs  jwt.rs  jwt_claims.rs  mod.rs  split_jwt.rs
src/libs/auth/src/jwt/algoritms/: dilithium3.rs  falcon512.rs  mod.rs  rsa.rs  sig_algoritm.rs
src/libs/auth/src/jwt_old/: decode_jwt.rs  mod.rs  verify_token.rs
src/libs/auth/src/key_pair_db/: get_latest_key_pair_db.rs  mod.rs  save_key_pair_db.rs
src/libs/auth/src/refresh_token/: create_refresh_token_db.rs  delete_refresh_token_db.rs  get_refresh_token_data_db.rs  mod.rs
src/libs/auth/src/tables/: key_pair.rs  mod.rs  refresh_tokens.rs
src/libs/cache/: Cargo.toml
src/libs/cache/src/: cache.rs  error.rs  lib.rs
src/libs/crypto/: Cargo.toml
src/libs/crypto/src/: error.rs  lib.rs  rand_string.rs
src/libs/crypto/src/hashing/: argon2_hash.rs  compare_argon2_hash.rs  mod.rs
src/libs/crypto/src/kem/: mod.rs
src/libs/crypto/src/kem/ml_kem1024/: decrypt_ml_kem1024.rs  encrypt_ml_kem1024.rs  generate_ml_kem1024_key_pair.rs  mod.rs
src/libs/crypto/src/sign/: key_pair.rs  mod.rs
src/libs/crypto/src/sign/dilithium3/: generate_dilithium3_key_pair.rs  mod.rs  sign_dilithium3.rs  validate_dilithium3_sign.rs
src/libs/crypto/src/sign/falcon512/: generate_falcon512_key_pair.rs  mod.rs  sign_falcon512.rs  validate_falcon512_sign.rs
src/libs/crypto/src/sign/rsa/: generate_rsa_key_pair.rs  mod.rs  sign_rsa.rs  validate_rsa_sign.rs
src/libs/key_pair_roller/: Cargo.toml
src/libs/key_pair_roller/src/: key_pair_roller.rs  lib.rs
src/libs/public_pem_sync/: Cargo.toml
src/libs/public_pem_sync/src/: lib.rs  public_pem.rs  public_pem_sync.rs
src/libs/toml/: Cargo.toml
src/libs/toml/src/: create_toml_file.rs  error.rs  format_validate.rs  lib.rs  read_or_create_toml.rs  read_toml_file.rs
src/libs/toml/src/tomls/: config_toml.rs  mod.rs
src/libs/types/: Cargo.toml
src/libs/types/src/: down_stream_host.rs  lib.rs  proxy_pass.rs  server.rs
