[workspace]
members = ["src/bin/servo", "src/libs/auth", "src/libs/crypto", "src/libs/toml"]


[workspace.dependencies]

servo_crypto = { path = "src/libs/crypto" }
servo_auth = { path = "src/libs/auth" }
servo_toml = { path = "src/libs/toml" }

# async and parralelism
dashmap = "6.1.0"

# Types
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }

# Errors
thiserror = "2.0.15"

# Logging
env_logger = "0.11.8"
log = "0.4.27"

# Serialization and encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
base64 = "0.22.1"

# Storage
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
] }
