[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

argon2 = "0.5.3"
rand = "0.9.2"
openssl = "0.10.73"
oqs = "0.11"
aes-gcm = "0.10.3"

[features]
rsa = []
dilithium3 = []
falcon512 = []
ml_kem1024 = []
argon2 = []
